src/test/ui/resolve/resolve-inconsistent-binding-mode.stderr
error[E0409]: variable `i` is bound in inconsistent ways within the same match arm
  --> $DIR/resolve-inconsistent-binding-mode.rs:7:32
   |
LL |       Opts::A(ref i) | Opts::B(i) => {}
   |                   -            ^ bound in different ways
   |                   |
   |                   first binding

error[E0409]: variable `i` is bound in inconsistent ways within the same match arm
  --> $DIR/resolve-inconsistent-binding-mode.rs:16:32
   |
LL |       Opts::A(ref i) | Opts::B(i) => {}
   |                   -            ^ bound in different ways
   |                   |
   |                   first binding

error[E0409]: variable `i` is bound in inconsistent ways within the same match arm
  --> $DIR/resolve-inconsistent-binding-mode.rs:25:40
   |
LL |       Opts::A(ref mut i) | Opts::B(ref i) => {}
   |                       - first binding  ^ bound in different ways

error[E0308]: mismatched types
  --> $DIR/resolve-inconsistent-binding-mode.rs:7:32
   |
LL |       Opts::A(ref i) | Opts::B(i) => {}
   |                                ^ expected &isize, found isize
   |
   = note: expected type `&isize`
              found type `isize`

error[E0308]: mismatched types
  --> $DIR/resolve-inconsistent-binding-mode.rs:16:32
   |
LL |       Opts::A(ref i) | Opts::B(i) => {}
   |                                ^ expected &isize, found isize
   |
   = note: expected type `&isize`
              found type `isize`

error[E0308]: mismatched types
  --> $DIR/resolve-inconsistent-binding-mode.rs:25:36
   |
LL |       Opts::A(ref mut i) | Opts::B(ref i) => {}
   |                                    ^^^^^ types differ in mutability
   |
   = note: expected type `&mut isize`
              found type `&isize`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0409.
For more information about an error, try `rustc --explain E0308`.
